# ipf-mcp-playground

./: .env.sample  .gitignore  LICENSE  README.md  cli_app.py  pyproject.toml
src/mcp_ipf/: __init__.py  ipf.py  registry.py  server.py  tools-obsidian-copy.py  tools.py
