[project]
name = "mcp-ipf"
version = "0.1.0"
description = "MCP server to work with IP Fabric via the python SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "ipfabric>=7.2.1",
 "mcp>=1.1.0",
 "rich>=14.0.0",
 "ruff>=0.12.2",
]
[[project.authors]]
name = "Seb d'Argoeuves"
email = "sebastien.dargoeuves@ipfabric.io"

# [build-system]
# requires = [ "hatchling",]
# build-backend = "hatchling.build"

# [dependency-groups]
# dev = [
#     "pyright>=1.1.389",
# ]

# [project.scripts]
# mcp-ipf = "mcp_ipf:main"



[tool.ruff]
line-length = 125
lint.select = [
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "PL", # Pylint
    "SIM", # flake8-simplify
]

lint.fixable = ["ALL"]

lint.ignore = [
    # Missing docstring "D100" - "D107".
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205", # 1 blank line required between summary line and description.
    "D202", # No blank lines allowed after function docstring.
    "D203", # Use a blank line to separate the docstring from the class definition.
    "D209", # Multi-line docstring closing quotes should be on a separate line.
    "D212", # Multi-line docstring summary should start at the first line.
    "D213", # Multi-line docstring summary should start at the second line.
    "D400", # First line should end with a period.
    "D401", # First line of docstring should be in imperative mood.
    "D406", # Section name should end with a newline.
    "D407", # Missing dashed underline after section.
    "D413", # Missing blank line after last section.
    "D415", # First line should end with a period, question mark, or exclamation point.
    # "E501", # Line too long
    "PLR0913", # Too many arguments
    "SIM115", # Use context handler for opening files
]
show-fixes = true
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
